--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="http://localhost:5173/main.jsx"></script>
+    <script type="module" src="http://localhost:5173/src/main.jsx"></script>
   </body>
 </html>
